--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,17 +15,36 @@ html {
 }
 
 body {
+    margin: 0;
+    padding: 0;
     min-height: 100%;
-    /*position: relative;*/
+    position: relative;
     font-family: Tahoma, Verdana, Segoe, sans-serif !important;
     font-size: 14px;
     background-color: #0f5586 !important;
-    margin-bottom: 45px;
     padding-bottom: 0 !important;
     color: #F0F8FF !important;
 }
 
-.footer {
+/* ----------------------- Home page -----------------------*/
+
+#container {
+    display: block;
+    position: relative;
+    min-height: 100%;
+}
+
+#header {
+    padding: 10px;
+    margin: 5px auto;
+}
+
+#body {
+    padding: 10px;
+    padding-bottom: 45px;   /* Height of the footer */
+}
+
+#footer {
     margin: 0 auto;
     position: absolute;
     bottom: 0;
@@ -40,19 +59,27 @@ body {
     text-align: right;
 }
 
-.header {
-    margin: 5px 0;
-}
-
-.header h1 {
+#header h1, #header .language-dropdown {
     margin: 10px 0;
 }
 
-.footer p {
+#footer p {
     margin: 5px 0;
 }
 
-/* ----------------------- Home page -----------------------*/
+#container .row-department {
+    margin: 10px 0 30px 0;
+}
+
+#container .row-department div {
+    margin: 0 auto;
+    min-height: 200px;
+    text-align: center;
+}
+
+#container > div {
+    width: 80%;
+}
 
 h1 {
     text-align: center;
@@ -67,33 +94,8 @@ h1 {
     margin: 0 auto;
 }
 
-#page {
-    display: block;
-    height:100vh;
-    /*position: absolute;*/
-    /*min-height: 100%;*/
-    /*bottom:0;*/
-    /*top:0;*/
-    /*left:0;*/
-    /*right:0;*/
-    /*color: #F0F8FF !important;*/
-    /*background-color: #0f5586;*/
-}
-#page .row-department {
-    margin: 10px 0 15px 0;
-}
-
-#page .row-department div {
-    margin: 0 auto;
-    min-height: 200px;
-    text-align: center;
-}
-
-#page > div {
-    width: 80%;
-}
-
 .conference-departments {
+    padding-bottom: 45px;
     margin: 20px 0;
 }
 
@@ -109,8 +111,8 @@ h1 {
 
 .conference-departments img {
     margin: 0 auto;
+    display: inline-block;
 }
-
 
 .language-dropdown a.dropdown-toggle {
     margin: 10px 0; /*TODO */
@@ -136,11 +138,10 @@ h1 {
 }
 
 span.glyphicon-globe {
-    font-size: 1.65em;
+    font-size: 1.75em;
 }
 
 /* ----------------------- Home page end ----------------------- */
-
 .nav span {
     margin-right: 10px;
 }
