--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,3 +221,30 @@ span.glyphicon-asterisk {
 .ml {
     margin-left: 10px
 }
+
+.text-center {
+    padding-top: 20px;
+}
+.col-xs-12 {
+    background-color: #fff;
+}
+#sidebar {
+    height: 100%;
+    padding-right: 0;
+    padding-top: 20px;
+}
+#sidebar .nav {
+    width: 95%;
+}
+#sidebar li {
+    border:0 #f2f2f2 solid;
+    border-bottom-width:1px;
+}
+
+.content .row-offcanvas {
+    margin: 0;
+}
+
+.content #sidebar {
+    padding-left: 0;
+}
