--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,8 +237,8 @@ span.glyphicon-asterisk {
     width: 95%;
 }
 #sidebar li {
-    border:0 #f2f2f2 solid;
-    border-bottom-width:1px;
+    /*border:0 #f2f2f2 solid;*/
+    /*border-bottom-width: 1px;*/
 }
 
 .content .row-offcanvas {
@@ -247,4 +247,15 @@ span.glyphicon-asterisk {
 
 .content #sidebar {
     padding-left: 0;
+}
+
+.content .login-sidepanel-right {
+    background-color: inherit;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.content .login-sidepanel-right > div {
+    width: 80%;
+    margin: 0 auto;
 }
