client side add paper and invoice

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -245,3 +245,14 @@ span.glyphicon-asterisk {
 .colorpicker {
     margin-top: -50px !important;
 }
+
+.control-label-right {
+    margin-bottom: 0;
+    padding-top: 7px;
+    text-align: left;
+    font-weight: normal;
+}
+
+.btn {
+    margin: 2px;
+}
