--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,3 +256,11 @@ span.glyphicon-asterisk {
 .btn {
     margin: 2px;
 }
+
+.padding-5 {
+    padding: 5px;
+}
+
+.margin-top7 {
+    margin-top: 7px;
+}
