admin criteria crud done + bug fixes and paper selects chained + change department

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -264,3 +264,8 @@ span.glyphicon-asterisk {
 .margin-top7 {
     margin-top: 7px;
 }
+
+.admin-back {
+    padding-left: 15px;
+    padding-bottom: 5px;
+}
