--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,3 +277,38 @@ span.glyphicon-asterisk {
 .centered{
     margin: 0 auto;
 }
+
+.news-title {
+    padding-bottom: 10px;
+    margin: 15px 0 20px;
+    border-bottom: 1px solid #eeeeee;
+}
+
+.news-wrapper {
+    padding: 10px;
+}
+
+.news-description {
+    margin-bottom: 20px;
+}
+
+.pagination > li > span,
+.pagination > li > a {
+    padding: 3px 6px !important;
+}
+
+.news-pages {
+    left: -10%;
+    right: -10%;
+    bottom: 4%;
+    position: absolute;
+    width: 80%;
+}
+
+.news-pages .pagination {
+    margin: 5px 0;
+}
+
+.mb20 {
+    margin-bottom: 20px;
+}
