--- a/public/css/style.css
+++ b/public/css/style.css
@@ -327,3 +327,21 @@ body.contact li.contact { background-color: #000;}
 #sub-header ul li:hover a,
 body.home li.home a,
 body.contact li.contact a { color: #fff; }
+
+.search-form {
+    margin-bottom: 20px;
+    margin-top: 15px;
+}
+
+.search-form div {
+    margin-left: 15px;
+    padding: 5px;
+}
+
+.search-form select {
+    min-width: 200px !important;
+}
+
+.search-form input[type=text] {
+    width: 110px !important;
+}
